changed the ideia of the website

--- a/index.html
+++ b/index.html
@@ -5,31 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="Ferrari Logo" type="imagex/png" href="assets/images/ferrarilogo.ico">
-    <link rel="shortcut icon" href="assets/images/ferrarilogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/iconferrari2.png" type="image/x-icon">
     <title>Ferrari</title>
 </head>
-<body>
-    <div class="all">
-
-    
+<body>  
     <header>
-        <figure>
-            <img src="assets/images/ferrarilogo.png" alt="Ferrari Logo">
-        </figure>
+        <figure><img src="assets/images/F1_white.svg.png" alt="logo f1"></figure>
     </header>
     <main>
-        <div class="line"></div><!--line-->
-        <figure>
-            <img src="assets/images/carrof1.png" alt="Carro F1" class="car">
-        </figure>
+        <section class="first">
+            <figure><img src="assets/images/ferrari-96052_1920.png" alt="ferrari desenho"></figure>
+            <aside> 
+                <p>A Fórmula 1 é a mais popular modalidade de automobilismo do mundo. É a categoria mais avançada do esporte a motor<br> e é regulamentada pela Federação Internacional de Automobilismo.</p>
+                <button>Temporada 2023</button>
+            </aside>
+        </section>
+        <section class="second">
+            <figure>
+                <img src="assets/images/ferrarid.png" alt="ferrari">
+            </figure>
+        </section>
     </main>
-    <footer>
-        <figure>
-            <a href="https://www.instagram.com/ferrari/?hl=pt-br" target="_blank"><img src="assets/images/instagram.png" alt="Instagram"></a>
-            <a href="https://twitter.com/Ferrari" target="_blank"><img src="assets/images/x.png" alt="Instagram" ></a>
-           <a href="https://www.tiktok.com/@ferrari" target="_blank"><img src="assets/images/tiktok.png" alt="Instagram"></a> 
-        </figure>
-    </footer>
-    </div>
 </body>
 </html>
