finished the page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="Ferrari Logo" type="imagex/png" href="assets/images/ferrarilogo.ico">
     <link rel="shortcut icon" href="assets/images/iconferrari2.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+<!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
     <title>Ferrari</title>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css"
+  />
 </head>
 <body>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <header>
         <figure><img src="assets/images/F1_white.svg.png" alt="logo f1"></figure>
     </header>
@@ -22,9 +29,20 @@
         </section>
         <section class="second">
             <figure>
-                <img src="assets/images/ferrarid.png" alt="ferrari">
+                <img src="assets/images/ferrarid.png" alt="ferrari" class="sferrari">
             </figure>
+                <div class="my-slider">
+                    <div><img src="/assets/images/carrof1.png" alt=""></div>
+                    <div><img src="/assets/images/carrof1.png" alt=""></div>
+                    <div><img src="/assets/images/carrof1.png" alt=""></div>
+                    <div><img src="/assets/images/carrof1.png" alt=""></div>
+                    <div><img src="/assets/images/carrof1.png" alt=""></div>
+                    <div><img src="/assets/images/carrof1.png" alt=""></div>
+                  </div>
         </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+<!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
+    <script type="module" src="script/script.js"></script>
 </body>
 </html>
