--- a/index.html
+++ b/index.html
@@ -6,43 +6,36 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="Ferrari Logo" type="imagex/png" href="assets/images/ferrarilogo.ico">
     <link rel="shortcut icon" href="assets/images/iconferrari2.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
-<!--[if (lt IE 9)]><script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/min/tiny-slider.helper.ie8.js"></script><![endif]-->
     <title>Ferrari</title>
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css"
-  />
 </head>
 <body>  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <header>
-        <figure><img src="assets/images/F1_white.svg.png" alt="logo f1"></figure>
+        <figure>
+            <img src="assets/images/F1_white.svg.png" alt="f1logo">
+        </figure>
     </header>
+
     <main>
-        <section class="first">
-            <figure><img src="assets/images/ferrari-96052_1920.png" alt="ferrari desenho"></figure>
-            <aside> 
-                <p>A Fórmula 1 é a mais popular modalidade de automobilismo do mundo. É a categoria mais avançada do esporte a motor<br> e é regulamentada pela Federação Internacional de Automobilismo.</p>
+        <section class="primeira-parte">
+            <figure><img src="assets/images/ferrari-96052_1920.png" alt=""></figure>
+            <aside>
+                <p>A Fórmula 1 é a mais popular <br>modalidade de automobilismo do<br> mundo. É a categoria mais avançada do esporte a motor<br> e é regulamentada pela Federação <br>Internacional de Automobilismo.</p>
                 <button>Temporada 2023</button>
             </aside>
         </section>
-        <section class="second">
-            <figure>
-                <img src="assets/images/ferrarid.png" alt="ferrari" class="sferrari">
-            </figure>
-                <div class="my-slider">
-                    <div><img src="/assets/images/carrof1.png" alt=""></div>
-                    <div><img src="/assets/images/carrof1.png" alt=""></div>
-                    <div><img src="/assets/images/carrof1.png" alt=""></div>
-                    <div><img src="/assets/images/carrof1.png" alt=""></div>
-                    <div><img src="/assets/images/carrof1.png" alt=""></div>
-                    <div><img src="/assets/images/carrof1.png" alt=""></div>
-                  </div>
+
+        <section class="final">
+            <div class="itens">
+                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
+            </div>
         </section>
+
+        
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-<!-- NOTE: prior to v2.2.1 tiny-slider.js need to be in <body> -->
-    <script type="module" src="script/script.js"></script>
+
 </body>
 </html>
