--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
         <section class="final">
             <div class="itens">
-                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
-                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
-                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
-                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
-                <div class="item"><img src="assets/images/f1.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/racing-3415413_1280.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/car-racing-1404041_1280.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/oldtimer-4097480_1280.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/racing-3415413_1280.jpg" alt=""></div>
+                <div class="item"><img src="assets/images/ferrari-3090880_1280.jpg" alt=""></div>
             </div>
         </section>
 
